Dec 30, 2014 - chris ---------------------------------------------------
o issue #43: fixed segfault when flushing transactions (thanks, Joel
	Jacobson)

Nov 21, 2014 - chris ---------------------------------------------------
o Fixed compilation error on OSX (thanks, Daniel Lemire)

Nov 20, 2014 - chris ---------------------------------------------------
o Fixed compilation error on debian Wheezy, gcc 4.7.2, 32bit (thanks,
	Thomas Fähnle)

Nov 08, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.9

Nov 08, 2014 - chris ---------------------------------------------------
o C# API now supports approx. matching
o C# auto-cleanup of resources no longer can cause segmentation faults

Nov 01, 2014 - chris ---------------------------------------------------
o Removed outdated project files of MSVC2008, added MSVC2013

Oct 15, 2014 - chris ---------------------------------------------------
o Removed custom ham_* typedefs; now using types from stdint.h

Oct 14, 2014 - chris ---------------------------------------------------
o Fixed a failing test from the erlang package

Oct 10, 2014 - chris ---------------------------------------------------
o Unused pages are now freed with madvice; minor performance improvements
	when large files are mmapped

Oct 06, 2014 - chris ---------------------------------------------------
o Improved record storage and reduced size for fixed length records
o Minor performance improvements for hola_sum
o ABI change: removed deprecated fields from ham_record_t

Sep 22, 2014 - chris ---------------------------------------------------
o Fixed an assert when resizing lists with an UpfrontIndex (nodes with keys
	of variable lengths or duplicate records)

Sep 18, 2014 - chris ---------------------------------------------------
o Major rewrite of the recovery logic; increased test coverage
o Added new parameter HAM_PARAM_JOURNAL_SWITCH_THRESHOLD to control
	the size of the journal files
