@@ -1,3 +1,7 @@
+Jan 22, 2015 - chris ---------------------------------------------------
+o Added Cursor.TryFind to hamsterdb-dotnet
+	(thanks, mjmckp <matthew.j.m.peacock@gmail.com>)
+
 Dec 30, 2014 - chris ---------------------------------------------------
 o issue #43: fixed segfault when flushing transactions (thanks, Joel
 	Jacobson)
